# nchash

./: .travis.yml  README.md  README.rst  ncchk.py  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
conda/: dev-environment.yml  meta.yaml
docs/: Makefile  conf.py  index.rst
nchash/: __init__.py  nchash.py
test/: test_nchash.py  utils.py
